# python-crash-course

01-getting-started/: README.md  pyproject.toml
02-variable-and-simple-data-types/: README.md  pyproject.toml
02-variable-and-simple-data-types/src/_02_variable_and_simple_data_types/: __init__.py
03-introducing-lists/: README.md  pyproject.toml
03-introducing-lists/src/_03_introducing_lists/: __init__.py
04-working-with-lists/: README.md  pyproject.toml
04-working-with-lists/src/_04_working_with_lists/: __init__.py
