[project]
name = "02-variable-and-simple-data-types"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "CRBroughton", email = "crbroughton@posteo.uk" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_02_variable_and_simple_data_types"]
