[project]
name = "03-introducing-lists"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "CRBroughton", email = "crbroughton@posteo.uk" }
]
dependencies = [
    "black>=24.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_03_introducing_lists"]
